# bidskit

./: .bidsignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE.md  Makefile  Protocol_Translator.json  README.md  bidskit.py  bidskit_ui.py  caltech_bids_heuristic.py  dcm2bids  dcm2bids.py  dcm2bids.py.bak  dcm2ndar.py  dcmhdr.py  heudibids  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
bidskit/: Makefile  __init__.py  __main__.py  auto.py  bidskit.ui  bidskit_ui.py  bidstree.py  convert.py  dcm2niix.py  flywheel.py  fmaps.py  io.py  json.py  launcher.py  main_window.py  mainwindow.py  organize.py  translate.py
bidskit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bidskit/templates/: .bidsignore  CHANGES  bidsignore
docker_image/: Dockerfile
docs/: Features.md  Flywheel.md  Installation.md  QuickStart.md
