[project]
name = "bidskit"
version = "2025.11.7"
description = "BIDS curation toolkit"
authors = [
    {name = "Mike Tyszka",email = "jmt@caltech.edu"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydicom (>=2.3.1,<2.4.0)",
    "numpy (>=2.2.4)"
]

[project.scripts]
bidskit = "bidskit.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
